@@ -22,17 +22,7 @@ name|java
 operator|.
 name|io
 operator|.
-name|File
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|io
-operator|.
-name|FileInputStream
+name|InputStream
 import|;
 end_import
 
@@ -136,6 +126,20 @@ name|org
 operator|.
 name|apache
 operator|.
+name|commons
+operator|.
+name|lang
+operator|.
+name|StringEscapeUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|solr
 operator|.
 name|core
@@ -197,28 +201,25 @@ operator|.
 name|getWriter
 argument_list|()
 decl_stmt|;
-name|File
-name|f
+name|InputStream
+name|in
 init|=
-operator|new
-name|File
-argument_list|(
 name|getServletContext
 argument_list|()
 operator|.
-name|getRealPath
+name|getResourceAsStream
 argument_list|(
-literal|"admin.html"
-argument_list|)
+literal|"/admin.html"
 argument_list|)
 decl_stmt|;
 if|if
 condition|(
-name|f
-operator|.
-name|exists
-argument_list|()
+name|in
+operator|!=
+literal|null
 condition|)
+block|{
+try|try
 block|{
 comment|// This attribute is set by the SolrDispatchFilter
 name|CoreContainer
@@ -241,11 +242,7 @@ name|IOUtils
 operator|.
 name|toString
 argument_list|(
-operator|new
-name|FileInputStream
-argument_list|(
-name|f
-argument_list|)
+name|in
 argument_list|,
 literal|"UTF-8"
 argument_list|)
@@ -271,15 +268,25 @@ operator|new
 name|String
 index|[]
 block|{
+name|StringEscapeUtils
+operator|.
+name|escapeJavaScript
+argument_list|(
 name|request
 operator|.
 name|getContextPath
 argument_list|()
+argument_list|)
 block|,
+name|StringEscapeUtils
+operator|.
+name|escapeJavaScript
+argument_list|(
 name|cores
 operator|.
 name|getAdminPath
 argument_list|()
+argument_list|)
 block|}
 decl_stmt|;
 name|out
@@ -298,6 +305,17 @@ name|replace
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+finally|finally
+block|{
+name|IOUtils
+operator|.
+name|closeQuietly
+argument_list|(
+name|in
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 else|else
 block|{
